Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.0.0 Beta 2
-
Fix Version/s: 5.1.0 Beta 1
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Environment:Windows 7 (fixed)
Linux (should be fixed now)
Mac ?
-
Commits:bdc0eaae6b47eebbf99bea1034857287fb75aa46 9a90c2232f1e21b3f61da6c3a472380bcb996736 b2c73c73cd0a68aae0586cf447c2612c13aeb52c
Description
Mousing into and out of native widget should only generate enter/leave for that specific widget. However, currently enter/leave is generated for the entire parent chain, e.g.:
// enter combobox 1363 ## Got Leave for: QWidget(0x20bbcf0, name = "centralWidget") 1364 ## Got Leave for: MainWindow(0x19fb40, name = "MainWindow") 1367 ## Got Enter for: MainWindow(0x19fb40, name = "MainWindow") 1369 ## Got Enter for: QWidget(0x20bbcf0, name = "centralWidget") 1370 ## Got Enter for: QComboBox(0x2118560, name = "comboBox") // leave combobox 1685 ## Got Leave for: QComboBox(0x2118560, name = "comboBox") 1687 ## Got Leave for: QWidget(0x20bbcf0, name = "centralWidget") 1688 ## Got Leave for: MainWindow(0x19fb40, name = "MainWindow") 1691 ## Got Enter for: MainWindow(0x19fb40, name = "MainWindow") 1693 ## Got Enter for: QWidget(0x20bbcf0, name = "centralWidget")
Attachments
For Gerrit Dashboard: QTBUG-27550 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
37504,1 | Fix excess enter/leave event generation for native widgets. | master | qt/qtbase | Status: ABANDONED | -1 | 0 |
37613,3 | Fix excess enter/leave event generation for native widgets | master | qt/qtbase | Status: MERGED | +2 | 0 |
40496,2 | Fixed excessive enter/leave events being generated with the xcb plugin. | master | qt/qtbase | Status: MERGED | +2 | 0 |
49165,2 | Cocoa: Correct enter/leave event handling. | stable | qt/qtbase | Status: ABANDONED | +2 | 0 |